update swagger delete
